--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -90,6 +90,11 @@
             android:layout_height="match_parent"
             android:layout_weight="1"/>
     </LinearLayout>
+    <Button
+        android:id="@+id/notify"
+        android:text="Notify me"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:layout_height="wrap_content"
